@@ -10,4 +10,4 @@ RDEPEND=snmp? ( net-analyzer/net-snmp ) ldap? ( net-nds/openldap =dev-libs/cyrus
 SLOT=0
 SRC_URI=http://prdownloads.sourceforge.net/zabbix/zabbix-2.0.9rc1.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	depend.php	df169a364e191b840b695604097e3c21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	6032f7ec6471c6459da900e11f0f7bf7	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	phpconfutils	e108303831029e5b8a9d24b991b1d62a	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=cbd022ae7b1d86be41b3362a8d5a732e
+_md5_=15460f477b392c12055b59a39a2de7d9
