@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 1.4.6/init.d/zabbix-agentd 581 SHA256 5afaed3880c7f8d1a13d51d963f2758a0bc3ec982c667cc2aad9c84d44753452 SHA512 4d29435590d42374dc7428f09617ddbcc6e551850651f4d057a20b39689c041dcf3966b18efcec1c4478e44b9995ec3c55b1f3d3e27ba9ff5b96f0aef076da7a WHIRLPOOL 197096795bdb5387f62687b52894d86a10002a4e9bab11b28a71c3f0e575daebe6827d14b48983c9c0c3f49491a12751789ccc43e7e0e4e80ad60aac156eaf23
 AUX 1.4.6/init.d/zabbix-server 563 SHA256 8c2bc6b7dc1fb80e6b24536f7acb7ba102975b345da055cc19e33adfcdb95976 SHA512 897134b640ed2bd070fa3c29b9fdda368f6451179908fcd00aa2ee8710ea64556e6fcc1592e40a7050b323b56b67837004c1411c326ff4024f949089f980429b WHIRLPOOL e84983ddd78c29f76d8aed51b54f63db70a00637b6102cab065e36178c01f227770e19d999e0fae201ea266178221f40e141fb010f8171c787e2d78da6767372
@@ -33,19 +33,25 @@ AUX 2.0/zabbix_proxy.conf 9979 SHA256 a1fe3728322abac55d3dc62ce1b3c86daa58c7c8c5
 AUX zabbix-1.8.9-as-needed.patch 2737 SHA256 1c9b85c0a9d9161f983a590df387341c5168f254deb9f2cf858886a2e6e8aec1 SHA512 9ba379e8088697f26f29ac31f2c5e8cad8e0709993285afe9e390f63150ec09fab46089e3f29f2d6a818bf55042c39646ce19840498355fd6df43b1834c6078d WHIRLPOOL bc4728cf9e14284b91b45627090e45d39f53a721ba46d9379418d650d22732994bec11046d64d0f0136932d4f4e2f0c29de68f527db9d9f765f0245f1d39288f
 DIST zabbix-2.0.8.tar.gz 13457936 SHA256 c4b94960de0a1d0b20604a08503e9715c15845409368162c1e321040b8e4519a SHA512 5a65c7fcce33d98a0f441798ca83f16bb6ed31b8a1b025f39c4003a0906c148ed5ff9db41aec591f053083b6bacd3ea1a1c8b96c007c44da092bfa179693e403 WHIRLPOOL 8ae2815014a28895689e8083f21e26f8c0afd7bb5f12a177f8487d563a889941e15db5991668c56a2dad62bf1060a77195057fea6283059a8c4dcd39ff709c05
 DIST zabbix-2.0.9rc1.tar.gz 13648577 SHA256 474ac3a0fb47a0f2dc43667948ae40fbe895ae754ae71377ff084cb33c716db3 SHA512 2d67f5850066c6c932b42a2ca371def9bbc77a52b29e8f98bb116261a94df5aa13160f45a5d5c18a856c5c61a0cdb18d73178701e1ee80e476ad6eeb36110963 WHIRLPOOL 44edc34c4b8f81899e55c4d4b9f68bf6b604df3acd15c1d1a5468c5ac2cca9394cc9091e37dfbe0ca71278aebb7d1df9e622ef799bd8e84944f391b0ff5b058b
-EBUILD zabbix-2.0.8.ebuild 10573 SHA256 0e5969036f51ec7d410a57f817752216d807da506a5ad17c674956e63f4f62dc SHA512 7e7625ea7fe731e490d0a66f12f7b40cbd71b4d262a52010f1ec2914c5e73af40127b51f983a8202f8264cae9ae56f77942d233bbb34cb53ef0cdd488f8e774e WHIRLPOOL 9fd66f46301119ac52fbe0e0145b0e33036ee12677b9532ed2cfe71934553476971cca6c857b86c8b711e5d6a52161e948ec5b9653f9870ce04b183e64dd011c
-EBUILD zabbix-2.0.9_rc1-r2.ebuild 10450 SHA256 c00c03add58f079c5dd3234832b9093222db5f1c563753795139aaf92f1486fa SHA512 4eaf5d1d9be75dc3234c9f08683fc85592923747dca2c5581dad714105c9ddeb012cefbd3308304ac9975ab7c4bb6bcfb6d93d893035ed9615823050e67d20e3 WHIRLPOOL 61f76f1bdd4ad73fdb0e94dd3b1faffddf9f5e1f6a7be2947156a226860e05fd646e8a82a7a00b85808a01eb75e179ba82dcb11456b561eb57c811620cb6bdfd
-EBUILD zabbix-2.0.9_rc1-r3.ebuild 10452 SHA256 316373d1b30adc3192da4ee81a3f412b36d44a7eb11474754a810be9d950d517 SHA512 6a980059ce0fea1370f7839d11e68d5e4eff014668abe12e3611170cfe2833a3106867d24786ecc06bf5583f81b10271ad09114b398854b01271999a6b088e46 WHIRLPOOL 31b55ebd9db8f02f1f243d24794e8ace91c3d631babed4bd7e3a85a910f9c4337769b9413d4be65beeaad995d378ddbda8b34adfb8eb7253e6d2b06cd539de79
-MISC ChangeLog 31641 SHA256 37746e9f0d81b35709f4847daee05aad9878296eecde4230704dae3b74f20a9f SHA512 ccd5accf478e1d14b01ec3f9d425944a44aae7ecf36311cb7ad097f97f3bec25af0aa69695859f480b6d5560f09fa8483ada12e5b092749dafc219b702d34585 WHIRLPOOL d8eaef2aa51d2cd5dae7abd014357fb7eaa15a9c8f4dcf6c54af4be480cd36fb7915b4d3b3b2100f7895d391ff20efb78060f214a1d3f8a37028655f8a108bb5
+EBUILD zabbix-2.0.8.ebuild 10692 SHA256 3ce756e54ff9ee250a0b252b8d5711bf1f92c28b24e414a2f2195eb73527eaae SHA512 e4129dc4f4d0b5d6535fe6125bb84f17f94dc03769115ca20b2e5a61acbe4b399e2e53f7cad451b75b43dd370bef2e5cf5519c658bc77eca2ff94a66f0242f01 WHIRLPOOL 4bc7d342b8659cbab72472cac09f9a57d89a27aff37ed2bdeb5378aaf61f9e851eaa0271833f41f511e0d0e9a2b39d5d896fda76d16d18625da8ab5ca61b75f7
+EBUILD zabbix-2.0.9_rc1-r2.ebuild 10568 SHA256 46894e6bd39822870d97ac69e58d0869788c3ff64f5a5bf71167e88b35d562ed SHA512 49de7c0c5e8d48bd0772ce8107c2f98ab2dfc9cbfc131cef0c5917b93018d63cd5692aa1ab344b4729715ce6c25507c8fbd30baba65811a8118bc812ff901bc4 WHIRLPOOL 257ebccb9db8cbb66f668720509cf893833118b09af2eea787b16e0a442836e102a75b9607299a9cbc307d7656012f0ddfc480489791c0d729fef97deecfb42c
+EBUILD zabbix-2.0.9_rc1-r3.ebuild 10569 SHA256 1aec64e76a53c785d84818b05b04fee9c87e462eae00de58b7768a8f8967677d SHA512 9beb3a2666ccaaee823841ff6ce90d5add23d936f001484a471d42a5e213f238dc7b64fbe7c09f6108670276d0b2483723ee6b60c20682aa380a44710d625764 WHIRLPOOL e42b4d43c4d45c85c7b4664b10d9671463dfaaaab5b6fb812f33821d9abd4f6752933af4dac0b3aced48fda62251bdc177f52e67230cfbff636596de05f0c409
+MISC ChangeLog 32037 SHA256 b3e891ccc3b8298bc9d669e4f7ed45a78c8305d6e92b9bfa84649b83e9d21cfd SHA512 4d0a9b3a5b539fbf9fbaeeccb64ce7f221ae0d278faee41614b7535f64896436cc99596a87834c6d47fd8a2793d7ba3a91906188e9af9da8ab2fbc7be761cd62 WHIRLPOOL c73098c87aa84be80347287d8c8c799ae2e39656abf171209a017b4e66d7b66e346171e632a4b6267b88098680e1eed60aa451daa118a35776c95b04b1cfa862
 MISC metadata.xml 1192 SHA256 a1ad2643da11113f3315b4eb42782f514437c7093badc9d91a921c43f1a79141 SHA512 c4295da1665f2de24d2966a6a434a28c4dbf6a41779eb8f32ed2178b6979c17c92d2f2af042dda759af8a27a6371bbd02378f83846f538ef59954c506ec38cdd WHIRLPOOL 2d07f85c566949b01c169119b117bbda48326480639473636ff7082fd74d355ec40b4e153b29a2595152433ae2800eb775cca8533243d42061aa9f41fed8f0e6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSTxOKAAoJEC1LWXx4YDenHnYH/j8ASA/8ij8/0kaOoMU1TGhS
-J2WkwSAtbmKKRrERqmKtLx97GXTjfskWElQRaFWhGpjU27QLsTlv0BU/bnYJEQKm
-jhhcC17tM0XSNtbjxPyjkBerSZwjK6C1vXDVsusmNANVL6mFbW8rJuVZUObYM/Qu
-oOWz9ZAUf2jgjuEDtgSdk/BiaTvwZaMyEy4fS27k/XtCwCp33Zx48rFE3jzMvqlX
-w8EwxORClGzlj+Jp+fk19lo9uck2lBHHWsUc5x91DetVuk3P1FzB3UspTylXdPHF
-Q0VWEGoDK8SJ0s1p3CUQ0Usp5oEtlQnq/biDClr7Hnoq7VWGKQ0LUcpgRNUG5fU=
-=ebsp
+iQIcBAEBCgAGBQJST4ROAAoJEKXdFCfdEflKU7MP/1pCN4vndCap2k7yQWeC2Tmg
+GjpSnTeWTVAnbCgmMHMHoE931cXXaObWG/baNvBsNmNGxw+4cwRyj9d8o0tucdFD
+e3qTfd7aHKI800iv1vNwBr+YhM5ZTh9KNulb3McdlpeVvX3tXZhlJ2CXgKlTGwk0
+xq/G1oHZs7gXCaZ5Lut8xaSS48p36LyVd/5CTn6jGkLrnGW5SqTkE0OWCusUXBWM
+pFJqOxGf12M73zCEfQyyGqpz7FVF1nsi4B2zwAzyP1TOyQI2F5YL+aMLsA1/mThm
+X/NjqcHNRTx9+7iQDUo5niPZ0AQCnLTPSHP6VyUWfr6zs659G+FKc1EDsd66EseB
+9Xb3KcRpyNApScPpbuHn7k4WDcT553HUkl+VPolkkuiSB1DShPY+UjL3k+iLqi9s
+ADKfuHJMcvG9WfzNRVL3XlY5Yh8QWNrkHmXM3InVI56ah6+tqwiIgHc0RPeTmpMX
+EpE5UNNCz67y2PdETlvgVIt6/PrZId6W2hLQd/6A6jCT+I0Nr1KKprXe5JYmqsCg
+arMVRJm8NzHbO01A4y0Jkw+fA0HOVNa53Kfh3SJ2UgJ0Ejr/eISTkZjuI4dsda/s
+SWSjpVt6bkBTtPyLXc4BkerbBqi8RFFZaLiFxJQme2GHmc/CXl51KHSw+N19wr23
+PtljjKdGw72G1/iU+cTI
+=l2bI
 -----END PGP SIGNATURE-----
