@@ -1,6 +1,14 @@
 # ChangeLog for net-analyzer/zabbix
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/zabbix/ChangeLog,v 1.135 2013/10/04 19:14:10 mattm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/zabbix/ChangeLog,v 1.137 2013/10/05 03:12:50 zerochaos Exp $
+
+  05 Oct 2013; Rick Farina <zerochaos@gentoo.org> zabbix-2.0.8.ebuild,
+  zabbix-2.0.9_rc1-r2.ebuild, zabbix-2.0.9_rc1-r3.ebuild:
+  silence QA warning by removing epause and ebeep (not defined in EAPI5)
+
+  05 Oct 2013; Rick Farina <zerochaos@gentoo.org> zabbix-2.0.8.ebuild,
+  zabbix-2.0.9_rc1-r2.ebuild, zabbix-2.0.9_rc1-r3.ebuild:
+  trivial fix for bug #433708 to remove unneeded Makefiles
 
 *zabbix-2.0.9_rc1-r3 (04 Oct 2013)
 
